home page p much done

--- a/app/graphql/package.json
+++ b/app/graphql/package.json
@@ -4,7 +4,9 @@
   "description": "A Koa and GraphQL backend for frosh 2020 blog",
   "main": "app.js",
   "scripts": {
-    "test": "test"
+    "test": "test",
+    "create-migration": "node ./database/actions/create-migration.js",
+    "run-migration": "node ./database/actions/run-migration.js"
   },
   "repository": {
     "type": "git",
@@ -14,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server-koa": "^2.15.0",
+    "bluebird": "^3.7.2",
     "dotenv": "^8.2.0",
     "graphql-tools": "^6.0.10",
     "knex": "^0.21.1",
